--- a/css/styles.scss
+++ b/css/styles.scss
@@ -36,10 +36,7 @@ h1 {
     border: solid white;
 }
 .footer {
-    position:absolute;
-    bottom: 0;
-    width: 100%;
-    height: 100px;
+    padding: 20px 0;
     text-align: center;
     background-color: #A6785D;
     border: solid white;
