--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 body {
     background-color:#A6785D;
 }
+
 .jumbotron {
     margin: 0;
     padding: 10px;
@@ -10,37 +11,51 @@ body {
 }
 .img-resize {
     width: 100%;
-    max-height: 100%;
     object-fit: scale-down;
     overflow: hidden;
 }
-h1 {
-    text-align: center;
-}
-    a, a:hover {
-        color: inherit;
-        text-decoration: none;
-}
-.carousel {
-    border: solid white;
-    position: relative;
-}
-.carousel-inner {
+.item-image {
     max-height: 500px;
 }
-.carousel-caption {
-    background-color: rgba(0, 0, 0, 0.034);
-    width: 40%;
+h1 {
+    text-align: center;
+    margin: 20px 0;
+}
+a, a:hover {
+    color: inherit;
+    text-decoration: none;
+}
+/* Carousel base class */
+.carousel {
+    margin-bottom: 4rem;
+}
+
+/* Declare heights because of positioning of img element */
+.carousel-item {
+    height: 32rem;
+}
+.carousel-item > img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 32rem;
 }
 .card {
     border: solid white;
 }
 .footer {
-    position:absolute;
-    bottom: 0;
-    width: 100%;
-    height: 100px;
     text-align: center;
-    background-color: #A6785D;
-    border: solid white;
+    background-color: #3E4018;
+    border-top: solid white;
+}
+.socialIcons {
+    color: white;
+}
+.itemSpecifications {
+    color: white;
+    text-align: center;
+    margin-top: 10px;
+    padding-top: 15px;
+    border-top: solid white;
 }
